<resources>
    <string name="app_name">Women Football Predictor</string>
    <string name="intro_text">Welcome to Women Football Predictor! Here you can predict a lot of women football matches and gain a lot of points to climb the rankings. However, play just for fun!</string>
    <string name="lets_start">Let\'s start</string>
    <string name="select_championship">Select championship</string>
    <string name="predictions_rules">About predictions rules</string>
    <string name="championship">Championship</string>
    <string name="not_predicted">Not predicted</string>
    <string name="double_points">x2</string>
    <string name="activate_double_points">Activate x2</string>
    <string name="match_not_predicted">Match not predicted</string>
    <string name="to_be_defined">To be defined</string>
    <string name="back_to_championship_prediction">Back to championship prediction</string>
    <string name="standings">Standings</string>
    <string name="result">Result</string>
    <string name="prediction_target">Target</string>
    <string name="prediction_target_prediction">Prediction</string>
    <string name="prediction_target_real">Effective</string>
    <string name="prediction_target_points">Points</string>
    <string name="match_result">W/N/L</string>
    <string name="goals">Goals</string>
    <string name="goal_difference">Goal difference</string>
    <string name="total_points">Total points</string>
    <string name="show_result_details">Show result details</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="user">User nickname</string>
    <string name="position">Position</string>
    <string name="ranking">Ranking position</string>
    <string name="zero">0</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgotten_password">Forgotten password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="nickname">Nickname</string>
    <string name="nickname_info">This nickname will be visible in the predictions\' standings. You can change once a month</string>
    <string name="avatar">Avatar</string>
    <string name="avatar_info">This avatar will be visible in the predictions\' standings. You can change it whenever you want</string>
    <string name="secure_code_header">Secure code</string>
    <string name="secure_code_info_sum">Write the last digit of the digits sum computation of the secure code (example: 1269 -> 1 + 2 + 6 + 9 = 18 -> 8)</string>
    <string name="secure_code_info_mul">Write the last digit of the digits multiplication computation of the secure code (example: 1743 -> 1 * 7 * 4 * 3 = 84 -> 4)</string>
    <string name="all_fields_required">All fields are required</string>
    <string name="email_unmarked">Email not acceptable</string>
    <string name="incorrect">Email or password incorrect</string>
    <string name="login_completed">Login completed correctly</string>
    <string name="secure_code_incorrect">Secure code computation incorrect</string>
    <string name="nickname_already_used">Nickname already used</string>
    <string name="email_already_used">Email already used by another account</string>
    <string name="password_too_short">Password must have at least 6 characters</string>
    <string name="registration_completed">Login to verify your identity</string>
    <string name="back_to_login">Back to login</string>
    <string name="modify_password">Recovery password</string>
    <string name="watch_emails">Watch your email inbox</string>
    <string name="email_not_found">Email not found</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_logout">Are you sure you want to logout?</string>
    <string name="logout_completed">Logout completed correctly</string>
    <string name="back_to_select_championship">Back to select championship</string>
    <string name="back_to_user_info">Back to user info</string>
    <string name="day">Day</string>
    <string name="regular_season">Regular season</string>
    <string name="preliminary">Preliminary round</string>
    <string name="round_32">Round of 32</string>
    <string name="round_32_first_leg">Round of 32 - First leg</string>
    <string name="round_32_second_leg">Round of 32 - Second leg</string>
    <string name="round_16">Round of 16</string>
    <string name="round_16_first_leg">Round of 16 - First leg</string>
    <string name="round_16_second_leg">Round of 16 - Second leg</string>
    <string name="quarterfinals">Quarterfinals</string>
    <string name="quarterfinals_first_leg">Quarterfinals - First leg</string>
    <string name="quarterfinals_second_leg">Quarterfinals - Second leg</string>
    <string name="semifinals">Semifinals</string>
    <string name="semifinals_first_leg">Semifinals - First leg</string>
    <string name="semifinals_second_leg">Semifinals - Second leg</string>
    <string name="final_">Final</string>
    <string name="shield_group">Shield group</string>
    <string name="salvation_group">Salvation group</string>
    <string name="qualifications">Qualifier</string>
    <string name="points">Points</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="home_team">Home team</string>
    <string name="guest_team">Guest team</string>
    <string name="vs">-</string>
    <string name="programmed">Programmed</string>
    <string name="live">Live</string>
    <string name="finished">Finished</string>
    <string name="predict_scorers">Your scorers</string>
    <string name="update_data">Update matches results</string>
    <string name="data_updated">Matches results updated correctly</string>
    <string name="turn_up_volume">Turn up the volume</string>
    <string name="no_connection">No connection</string>
    <string name="connection_activated">Connection activated</string>
    <string name="retry">Retry</string>
    <string name="hi">Hi</string>
    <string name="match_predicted">Matches predicted</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="italy_serie_a_women">Serie A Women</string>
    <string name="uefa_womens_euro">UEFA Women\'s Euro</string>
    <string name="english_womens_super_league">Women\'s Super League</string>
    <string name="uefa_womens_champions_league">UEFA Women\'s Champions League</string>
    <string name="coppa_italia_women">Coppa Italia Women</string>
    <string name="serie_a_women_cup">Serie A Women\'s Cup</string>
    <string name="fifa_womens_u17_world_cup">FIFA U17 Women\'s World Cup</string>
    <string name="fifa_u20_womens_world_cup">FIFA U20 Women\'s World Cup</string>
    <string name="hear_rules">Hear rules</string>
    <string name="profile">Profile</string>
    <string name="rules_1">
        Are you ready to try your hand at the world of women\'s football predictions? This application is just for you!
        Predict the result of each match of the most important national and international championships and when the match is over, you will see a summary of which results you guessed correctly and which ones you got wrong.
        But don\'t worry: you\'ll have plenty of opportunities to earn points!\nFor each match, you will be able to earn points with:\n
        - the result: if you guess win/null/lose: +3 points;\n
        - home team goals: if you guess the number of goals of the home team: +3 points;\n
        - guest team goals: if you guess the number of goals of the guest team: +3 points;\n
        - goal difference: if you guess the goal difference between the two teams: +2 points;\n
        - goal match scorer: if you guess a goal scorer of the match: +6 points per player. In case of more than one goals from the same player, the points assignment for this player for this target remains 6;\n
        - own goal match scorer: if you guess an own goal scorer of the match: +8 points per player. In case of more than one own goals from the same player, the points assignment for this player for this target remains 8;\n
        - bonus more than one goal scorer: if you guess a scorer than scores more than one goal on the match: +2 points per goal;\n
        - bonus more than one own goal scorer: if you guess a scorer than scores more than one own goal on the match: +4 points per own goal;\n
        - the MVP predicted correctly: if you guess the MVP (Most Valuable Player) in the match: +10 points.\n
        \nFor a match in each match day, you can also activate double points: all points accumulated in that match are doubled.\n
        \n\nYou can predict the result of the match (goals scored) until six hours before its start. From then until the start of the match, you can predict the MVP and the goals and own goals scorers basing on the goals you have predicted for each team.
        \n\nAll clear? If so, we hope you have fun predicting women\'s football matches!
    </string>
    <string name="search_nickname">Search user nickname</string>
    <string name="objectives">Objectives</string>
    <string name="title_objective">Objective title</string>
    <string name="description_objective">Objective description</string>
    <string name="objective_completed">Completed</string>
    <string name="show_objectives">Show objectives</string>
    <string name="objectives_matches_predicted">Matches predicted</string>
    <string name="objectives_matches_predicted_description">Predict matches</string>
    <string name="objectives_matches_predicted_correctly">Matches predicted correctly</string>
    <string name="objectives_matches_predicted_correctly_description">Predict matches correctly on the result</string>
    <string name="team">Team</string>
    <string name="season">Season</string>
    <string name="add_best11_player">Add a Best 11 player</string>
    <string name="create_team">Create team</string>
    <string name="team_name">Team name</string>
    <string name="private_team">Private team</string>
    <string name="team_captain">Captain</string>
    <string name="c">C</string>
    <string name="season_recap">Season recap</string>
    <string name="played">MP</string>
    <string name="wins">W</string>
    <string name="nulls">N</string>
    <string name="lost">L</string>
    <string name="scored">G+</string>
    <string name="suffered">G-</string>
    <string name="difference">GD</string>
    <string name="played_long">Matches played</string>
    <string name="wins_long">Wins</string>
    <string name="nulls_long">Nulls</string>
    <string name="lost_long">Lost</string>
    <string name="scored_long">Goals scored</string>
    <string name="suffered_long">Goals suffered</string>
    <string name="difference_long">Goals difference</string>
    <string name="scorers_standings">Scorers standings</string>
    <string name="mvp_standings">MVP standings</string>
    <string name="best11_points_info">Show player points</string>
    <string name="yellow_cards_standings">Yellow cards standings</string>
    <string name="red_cards_standings">Red cards standings</string>
</resources>