<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Standings">

    <Toolbar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/teal_toolbar"
        android:id="@+id/toolbar">

        <RelativeLayout
            android:id="@+id/toolbar_select"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10sp"
            android:paddingTop="10sp"
            android:paddingBottom="10sp">

            <ImageView
                android:id="@+id/season"
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/season"
                android:contentDescription="@string/season" />

            <TextView
                android:id="@+id/season_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textSize="11sp"
                android:textColor="@color/black"
                android:layout_marginTop="6sp"
                android:src="@drawable/season"
                android:layout_marginEnd="28sp"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/logout"
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/logout"
                android:visibility="gone"
                android:tooltipText="@string/logout"
                android:contentDescription="@string/logout" />

            <ImageView
                android:id="@+id/back_to_championship_prediction"
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:gravity="center"
                android:src="@drawable/back"
                android:tooltipText="@string/back_to_championship_prediction"
                android:contentDescription="@string/back_to_championship_prediction"/>

            <ImageView
                android:id="@+id/scorers_standings"
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:gravity="center"
                android:src="@drawable/ball"
                android:tooltipText="@string/scorers_standings"
                android:contentDescription="@string/scorers_standings"
                android:layout_toEndOf="@id/back_to_championship_prediction" />

            <ImageView
                android:id="@+id/yellow_cards_standings"
                android:layout_width="29sp"
                android:layout_height="27sp"
                android:src="@drawable/yellow_card"
                android:tooltipText="@string/yellow_cards_standings"
                android:contentDescription="@string/yellow_cards_standings"
                android:layout_marginStart="5sp"
                android:layout_toEndOf="@id/scorers_standings" />

            <ImageView
                android:id="@+id/red_cards_standings"
                android:layout_width="29sp"
                android:layout_height="27sp"
                android:src="@drawable/red_card"
                android:tooltipText="@string/red_cards_standings"
                android:contentDescription="@string/red_cards_standings"
                android:layout_marginStart="5sp"
                android:layout_toEndOf="@id/yellow_cards_standings" />

            <ImageView
                android:id="@+id/mvp_standings"
                android:layout_width="29sp"
                android:layout_height="27sp"
                android:src="@drawable/mvp_standings"
                android:tooltipText="@string/mvp_standings"
                android:contentDescription="@string/mvp_standings"
                android:layout_marginStart="5sp"
                android:visibility="gone"
                android:layout_toEndOf="@id/red_cards_standings" />

            <TextView
                android:id="@+id/championship_name_season_recap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/season_recap"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="20sp"
                android:fontFamily="sans-serif-condensed-medium"
                android:layout_below="@+id/season"/>

        </RelativeLayout>
    </Toolbar>

    <RelativeLayout
        android:id="@+id/results_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginHorizontal="10sp"
        android:layout_below="@id/toolbar">

        <TextView
            android:id="@+id/played"
            android:layout_width="20sp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:gravity="center"
            android:text="@string/played"
            android:tooltipText="@string/played_long"
            android:layout_marginStart="128sp" />

        <TextView
            android:id="@+id/wins"
            android:layout_width="20sp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:gravity="center"
            android:text="@string/wins"
            android:tooltipText="@string/wins_long"
            android:layout_marginStart="5sp"
            android:layout_toEndOf="@id/played" />

        <TextView
            android:id="@+id/nulls"
            android:layout_width="20sp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:gravity="center"
            android:text="@string/nulls"
            android:tooltipText="@string/nulls_long"
            android:layout_marginStart="5sp"
            android:layout_toEndOf="@id/wins" />

        <TextView
            android:id="@+id/lost"
            android:layout_width="20sp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:gravity="center"
            android:text="@string/lost"
            android:tooltipText="@string/lost_long"
            android:layout_marginStart="5sp"
            android:layout_toEndOf="@id/nulls" />

        <TextView
            android:id="@+id/goals_scored"
            android:layout_width="20sp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:gravity="center"
            android:text="@string/scored"
            android:tooltipText="@string/scored_long"
            android:layout_marginStart="5sp"
            android:layout_toEndOf="@id/lost" />

        <TextView
            android:id="@+id/goals_suffered"
            android:layout_width="20sp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:gravity="center"
            android:text="@string/suffered"
            android:tooltipText="@string/suffered_long"
            android:layout_marginStart="5sp"
            android:layout_toEndOf="@id/goals_scored" />

        <TextView
            android:id="@+id/goals_difference"
            android:layout_width="20sp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:gravity="center"
            android:text="@string/difference"
            android:tooltipText="@string/difference_long"
            android:layout_marginStart="5sp"
            android:layout_toEndOf="@id/goals_suffered" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progress_updating_season_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10sp"
        android:indeterminate="true"
        android:layout_below="@id/results_info" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/championship_standing"
        android:layout_marginTop="10sp"
        android:layout_marginHorizontal="10sp"
        android:layout_below="@id/results_info" />

</RelativeLayout>