<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="45sp"
    android:gravity="center">

    <ImageView
        android:id="@+id/add_best_player"
        android:layout_width="25sp"
        android:layout_height="25sp"
        android:layout_marginTop="10sp"
        android:visibility="gone"
        android:src="@drawable/add_best_player"
        android:contentDescription="@string/add_best11_player" />

    <ImageView
        android:id="@+id/player_team_image"
        android:layout_width="25sp"
        android:layout_height="25sp"
        android:visibility="gone"
        android:contentDescription="@string/team"
        android:layout_toEndOf="@id/captain_relative_layout" />

    <TextView
        android:id="@+id/shirt_number"
        android:layout_width="25sp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:visibility="gone"
        android:gravity="center"
        android:textColor="@color/above_toolbar"
        android:fontFamily="sans-serif-medium"
        android:textStyle="italic|bold"
        android:layout_below="@id/player_team_image"
        android:layout_toEndOf="@id/captain_relative_layout" />

    <RelativeLayout
        android:id="@+id/captain_relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tooltipText="@string/team_captain"
        android:visibility="gone"
        android:layout_alignTop="@id/player_team_image"
        android:layout_marginTop="17sp">

        <ImageView
            android:id="@+id/circle_captain"
            android:layout_width="18sp"
            android:layout_height="18sp"
            android:src="@drawable/circle_captain"
            android:contentDescription="@string/team_captain" />

        <TextView
            android:id="@+id/captain"
            android:layout_width="18sp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:fontFamily="sans-serif-black"
            android:text="@string/c"
            android:gravity="center" />

    </RelativeLayout>

</RelativeLayout>